--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
         <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
         <meta name="description" content="小猪的博客-邮箱：pig810@outlook.com">        
         <script src="/dark.js"></script>  
-        <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
+        <script src="/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
@@ -30,13 +30,13 @@
             <div class="container-fluid"><a class="navbar-brand" href="#"> <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top"> 猪圈 </a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
                         <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
                         <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     </div>
                     <hr> 
                     <div class="d-grid">
-                      <a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
+                      <a href="/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
                     </div>                    
                     <div class="text-center">
                         2023-10-27
@@ -141,7 +141,7 @@
                         <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/09/2023_1002_182045.png" alt="2023_1002_182045.png" border="0">
                     </div>
                     <div class="d-grid">
-                      <a href="https://nqhyee.vsc.icu/文章/未来可寄" class="btn btn-primary">阅读</a>
+                      <a href="/文章/未来可寄" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-10-9 
@@ -156,12 +156,12 @@
                     <div class="card-body">
                         使用沼气电池的手表，699大洋 
                         <div class="text-center">
-                            <video id="vid1" class="video-js" controls preload="auto" data-setup="{}"><source src="https://nqhyee.vsc.icu/video/HomoWatch.mp4" type="video/mp4">
+                            <video id="vid1" class="video-js" controls preload="auto" data-setup="{}"><source src="/video/HomoWatch.mp4" type="video/mp4">
                               <p class="vjs-no-js">把JavaScript开开</p>
                             </video>
                         </div>
                     </div> 
-                      <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
+                      <a href="/homo/臭手表" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-9-4
                         <i class="bi bi-calendar4"></i>
@@ -175,7 +175,7 @@
                             盲憨和王六童都上了27
                         </div>
                     </div>
-                    <div class="d-grid"><a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
+                    <div class="d-grid"><a href="/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-7-8 
@@ -193,7 +193,7 @@
                         </div> mm给我报了一堆辅导班，以后可能没有时间维护了…
                     </div>
                     <div class="d-grid">
-                      <a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读</a>
+                      <a href="/文章/我emo了" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-7-8 
@@ -205,7 +205,7 @@
                     <div class="card-body">
                         QQ浏览器，我做错了什么？ 
                         <div class="d-grid">
-                          <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读</a>
+                          <a href="/文章/盲憨把自己压缩了" class="btn btn-primary">阅读</a>
                         </div>
                     </div>
                     <div class="card-footer text-center">
@@ -221,7 +221,7 @@
                     <div class="card-body">
                         更改内容一大堆
                     </div> 
-                    <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
+                    <a href="/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-6-29
                         <i class="bi bi-calendar4"></i>
@@ -232,7 +232,7 @@
                     <div class="card-body">
                         cdn.jsdelivr.net炸了，被墙了
                     </div>
-                    <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读</a>
+                    <a href="/日志/更换前端库" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-6-22
                         <i class="bi bi-calendar4"></i>
@@ -243,7 +243,7 @@
                     <h5 class="card-header text-center">更换证书</h5>
                     <div class="card-body">
                         更换SSL证书，抛弃cersign
-                    </div> <a href="https://nqhyee.vsc.icu/日志/更换证书" class="btn btn-primary">阅读</a>
+                    </div> <a href="/日志/更换证书" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-6-19
                     </div>
@@ -262,7 +262,7 @@
                             <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/29/sketch1698577243459.png" alt="sketch1698577243459.png" border="0" />
                         </div>
                     </div>
-                    <div class="d-grid"><a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
+                    <div class="d-grid"><a href="/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-10-22 
@@ -277,7 +277,7 @@
                         </div> 
                         <img class="img-fluid" src="https://cdnjson.com/images/2023/10/09/2023_1002_182045.png" alt="2023_1002_182045.png" border="0">
                     </div>
-                    <div class="d-grid"><a href="https://nqhyee.vsc.icu/文章/未来可寄" class="btn btn-primary">阅读</a>
+                    <div class="d-grid"><a href="/文章/未来可寄" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-10-9 
@@ -294,7 +294,7 @@
                             盲憨和王六童都上了27
                         </div>
                     </div>
-                    <div class="d-grid"><a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
+                    <div class="d-grid"><a href="/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-7-8 
@@ -310,7 +310,7 @@
                             <a href="https://imgtg.com/image/Ozfmqq"><img src="https://i.imgtg.com/2023/07/16/Ozfmqq.th.webp" alt="Ozfmqq.th.webp" border="0"></a>
                         </div> mm给我报了一堆辅导班，以后可能没有时间维护了…
                     </div>
-                    <div class="d-grid"><a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读</a>
+                    <div class="d-grid"><a href="/文章/我emo了" class="btn btn-primary">阅读</a>
                     </div>
                     <div class="card-footer text-center">
                         2023-7-8 
@@ -322,7 +322,7 @@
                     <h5 class="card-header text-center">盲憨把自己压缩了</h5>
                     <div class="card-body">
                         QQ浏览器，我做错了什么？ 
-                        <div class="d-grid"><a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读</a>
+                        <div class="d-grid"><a href="/文章/盲憨把自己压缩了" class="btn btn-primary">阅读</a>
                         </div>
                     </div>
                     <div class="card-footer text-center">
@@ -338,7 +338,7 @@
                     <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
                     <div class="card-body">
                         更改内容一大堆
-                    </div> <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
+                    </div> <a href="/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-6-29
                         <i class="bi bi-calendar4"></i>
@@ -348,7 +348,7 @@
                     <h5 class="card-header text-center">更换前端库</h5>
                     <div class="card-body">
                         cdn.jsdelivr.net炸了，被墙了
-                    </div> <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读</a>
+                    </div> <a href="/日志/更换前端库" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-6-22
                         <i class="bi bi-calendar4"></i>
@@ -359,7 +359,7 @@
                     <h5 class="card-header text-center">更换证书</h5>
                     <div class="card-body">
                         更换SSL证书，抛弃cersign
-                    </div> <a href="https://nqhyee.vsc.icu/日志/更换证书" class="btn btn-primary">阅读</a>
+                    </div> <a href="/日志/更换证书" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-6-19
                         <i class="bi bi-calendar4"></i>
@@ -378,7 +378,7 @@
                             </video>
                         </div>
                     </div>
-                    <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
+                    <a href="/homo/臭手表" class="btn btn-primary">阅读</a>
                     <div class="card-footer text-center">
                         2023-9-4
                         <i class="bi bi-calendar4"></i>
@@ -399,7 +399,7 @@
             <h4>由4EVERLAND托管</h4>
             <p>能启猪负责运营</p>
           <div class="btn-group">
-              <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
+              <a href="/sitemap.xml" class="btn btn-warning">网站地图查看 
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-diagram-2" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 5 7h2.5V6A1.5 1.5 0 0 1 6 4.5v-1zM8.5 5a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1zM3 11.5A1.5 1.5 0 0 1 4.5 10h1A1.5 1.5 0 0 1 7 11.5v1A1.5 1.5 0 0 1 5.5 14h-1A1.5 1.5 0 0 1 3 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1A1.5 1.5 0 0 1 9 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z" /></svg> 
               </a> 
               <a href="https://www.lkdns.top" class="btn btn-primary">域名由灵空提供 
