--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
             <div class="col-md">
                 <div class="container-fluid bg-primary text-center rounded animate__animated animate__bounceInDown">
                   <h4 class="text-center text-white">请收藏我们的网址</h4>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewbox="0 0 16 16"><path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" /></svg>
+                  <i class="bi bi-star"></i>  
                   <p class="text-center text-white">nqhyee.vsc.icu</p>
                 </div> <br>
+                <!-- 列表 -->
                 <ul class="list-group animate__animated animate__fadeInLeftBig">
                   <li class="list-group-item active" aria-current="true">能启猪的屎山</li>
                   <li class="list-group-item">Github:pig810</li>
@@ -106,7 +107,8 @@
                       2023-11-6
                       <i class="bi bi-calendar4"></i>
                     </div>
-                 </div>               
+                 </div>
+              </div>               
                 <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                     <h4 class="text-center display-4">文章<i class="bi bi-body-text"></i></h4> <br>
                     <div class="card col-md text-center m-3 p-3"><img class="img-fluid rounded" src="https://z1.ax1x.com/2023/11/06/pil02eU.md.jpg" alt="pil02eU.jpg" border="0">
@@ -149,12 +151,13 @@
                         </div>
                     </div> <br>
                 </div>
-                <!-- 联系方式 -->
-                <h4 class="text-center display-4">联系我们</h4>
-                <img class="img-fluid" src="https://cdnjson.com/images/2023/09/05/-2023-09-05-20.46_1_edit_4059801933233.jpg" alt="-2023-09-05-20.46_1_edit_4059801933233.jpg" border="0">
+                <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+                  <!-- 联系方式 -->
+                  <h4 class="text-center display-4">联系我们</h4>
+                  <img class="img-fluid" src="https://cdnjson.com/images/2023/09/05/-2023-09-05-20.46_1_edit_4059801933233.jpg" alt="-2023-09-05-20.46_1_edit_4059801933233.jpg" border="0">
+                </div>
               </div>
-            </div>
-           <br> 
+            </div>         
         </div>
             <!--页脚-->
             <div class="mt-5 p-4 bg-dark text-white text-center">
