--- a/下载.html
+++ b/下载.html
@@ -7,13 +7,10 @@
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
         <script src="/dark.js"></script>  
-        <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
+        <script src="/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
-        </script>
-        <style>
-        .row{margin: 30px;} 
-        </style>              
+        </script>            
     </head>
     <body>
     <!--导航栏-->
@@ -26,18 +23,18 @@
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
                         <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="row"> 
+        <div class="row m-3"> 
           <h1 class="text-center">下载</h1>
           <div class="text-center container p-5 my-5 bg-primary text-white col-md rounded">
             <h2 class="text-center">必读</h2>
@@ -73,7 +70,7 @@
             <h4>由4EVERLAND托管</h4>
             <p>能启猪负责运营</p>
           <div class="btn-group">
-              <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
+              <a href="/sitemap.xml" class="btn btn-warning">网站地图查看 
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-diagram-2" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 5 7h2.5V6A1.5 1.5 0 0 1 6 4.5v-1zM8.5 5a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1zM3 11.5A1.5 1.5 0 0 1 4.5 10h1A1.5 1.5 0 0 1 7 11.5v1A1.5 1.5 0 0 1 5.5 14h-1A1.5 1.5 0 0 1 3 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1A1.5 1.5 0 0 1 9 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z" /></svg> 
               </a> 
               <a href="https://www.lkdns.top" class="btn btn-primary">域名由灵空提供 
