--- a/留言.html
+++ b/留言.html
@@ -19,13 +19,13 @@
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
                         <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
@@ -58,7 +58,7 @@
             <h4>由4EVERLAND托管</h4>
             <p>能启猪负责运营</p>
           <div class="btn-group">
-              <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
+              <a href="/sitemap.xml" class="btn btn-warning">网站地图查看 
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-diagram-2" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 5 7h2.5V6A1.5 1.5 0 0 1 6 4.5v-1zM8.5 5a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1zM3 11.5A1.5 1.5 0 0 1 4.5 10h1A1.5 1.5 0 0 1 7 11.5v1A1.5 1.5 0 0 1 5.5 14h-1A1.5 1.5 0 0 1 3 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1A1.5 1.5 0 0 1 9 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z" /></svg> 
               </a> 
               <a href="https://www.lkdns.top" class="btn btn-primary">域名由灵空提供 
