--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
          })(window, document, "clarity", "script", "hh7z8az9h5");
         </script>
-        <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
+        <script src="/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
+        <style>          
+          .searchResults li {
+            list-style-type: none;
+          }
+        </style>
         <meta name="description" content="欢迎来到能启猪的个人网站！我是sb，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
     </head>
     <body>
@@ -31,13 +36,23 @@
             <div class="container-fluid d-flex"><a class="navbar-brand" href="#"> <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top"> 猪圈 </a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
                         <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
                         <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
                         <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
                         <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
                         <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
+                        <form>
+                          <input class="form-control" type="text" id="searchInput" placeholder="搜索">
+                        </form>
+                         <!-- 搜索结果 -->
+                         <br>
+                         <ul class="searchResults bg-light rounded">                          
+                            <!-- 搜索结果将会动态加载到这里 -->
+                         </ul>
+                          <!-- JavaScript 代码 -->
+                          <script src="/search.js"></script>                            
                     </ul>
                 </div>
             </div>
