--- a/404.html
+++ b/404.html
@@ -26,14 +26,13 @@
                 </div>
             </div>
         </nav>
-        <div class="mt-4 p-5 bg-primary text-white rounded">
-            <div title="猪圈">
-                猪圈
-            </div>
+        <div class="mt-4 p-5 bg-primary text-white rounded m-3">
+            <h1 class="d-flex text-center" style="font-size:30vw">4<img class="img-fluid" height="10%" width="50%" src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="212239qsGyuK1o4RRFyM4E.png" border="0">4</h1>
             <p class="text-center">没有这个页面(能启猪偷懒断链</p>
             <div class="d-grid"><a href="/" class="btn btn-info btn-block">返回首页</a>
             </div>
-        </div> <br> <!--页脚-->
+        </div> <br> 
+        <!--页脚-->
         <div class="mt-5 p-4 bg-dark text-white text-center">
             <span id="runtime_span"></span>
             <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
