--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         .searchResults li {
             list-style-type: none;
         }
+        body {
+          background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);       
+          filter: drop-shadow(0 0 10px white);
+        }
+
     </style>
     <meta name="description" content="欢迎来到能启猪的个人网站！我是sb，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
 </head>
