--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <p><b>邮箱:</b>pig810@outlook.com</p>
             <p><b>github:</b>pigyee</p>
             <p><b>Nerchat:</b>pig810</p>
+            <p><b>matrix id:</b>pig810@chat.neboer.site</p>
         </div>
     </div>
     <!--页脚-->
