--- a/文章/畅游暗网/index.html
+++ b/文章/畅游暗网/index.html
@@ -55,7 +55,7 @@
     </div>
     <!--标题-->
     <div class="m-2">
-        <div class="p-3 shadow-sm rounded text-center">
+        <div class="p-3 shadow-sm rounded text-center row">
             <div class="col-md">
                 <h1 class="display-1">畅游暗网</h1><br>
             </div>
@@ -67,7 +67,6 @@
                     </div>
                 </div>
                 <br>
-                <img class="d-none d-lg-block mx-auto d-block" width="30%" height="auto" src="https://cdnjson.com/images/2024/02/19/sketch1708327122557_1b0d3ba93a6b4151b.png" alt="sketch1708327122557_1b0d3ba93a6b4151b.png" border="0" />
                 <div class="p-2 bg-primary text-white rounded col-sm">
                     <p>在安卓设备上用Tor浏览器访问.onion暗网</p>
                 </div>
