--- a/文章/ksweb网站/index.html
+++ b/文章/ksweb网站/index.html
@@ -17,7 +17,7 @@
     </script>
     <link rel="stylesheet" href="/index.css">
     <script>
-      hljs.highlightAll();
+        hljs.highlightAll();
     </script>
 </head>
 
@@ -101,12 +101,12 @@
         </div>
         <h2>配置ksweb</h2>
         <img class="mx-auto d-block" width="50%" height="50%" src="https://cdnjson.com/images/2024/02/21/Screenshot_20240221_134613_ru.kslabs.ksweb8bff4caa07362e58.jpg" alt="Screenshot_20240221_134613_ru.kslabs.ksweb8bff4caa07362e58.jpg" border="0" />
-        <p>打开lighttpd选项，点下面的+号，弹出这个页面，其他不用管，把启用https勾上，点最下面一行的文件夹，选择SSL证书（这里不说了，自己搜怎么获得SSL证书）</p>
+        <p>打开lighttpd选项，点下面的+号，新建一个主机，弹出这个页面，其他不用管，把启用https勾上，点最下面一行的文件夹，选择SSL证书（这里不说了，自己搜怎么获得SSL证书，推荐来此加密或cersign）</p>
         <img class="mx-auto d-block" width="50%" height="50%" src="https://cdnjson.com/images/2024/02/21/Screenshot_20240221_134036_ru.kslabs.ksweb_13a22336d1bde2132.jpg" alt="Screenshot_20240221_134036_ru.kslabs.ksweb_13a22336d1bde2132.jpg" border="0" />
         <p>可以看到有两个主机，一个是http主机，一个是https主机，点一下下面的https主机，选择编辑配置文件（忘截图了）</p>
         <img class="mx-auto d-block" width="50%" height="50%" src="https://cdnjson.com/images/2024/02/21/Screenshot_20240221_133244_ru.kslabs.ksweb_102c377e37ceaffbd.jpg" alt="Screenshot_20240221_133244_ru.kslabs.ksweb_102c377e37ceaffbd.jpg" border="0">
         <p>打开之后差不多是这样的，红圈里的#删掉（取消注释），蓝线画的改成ca证书的路径，
-        <img class="mx-auto d-block" width="50%" height="50%" src="https://cdnjson.com/images/2024/02/21/Screenshot_20240221_132934_ru.kslabs.ksweb1a274c93f246b6d3.jpg" alt="Screenshot_20240221_132934_ru.kslabs.ksweb1a274c93f246b6d3.jpg" border="0">
+            <img class="mx-auto d-block" width="50%" height="50%" src="https://cdnjson.com/images/2024/02/21/Screenshot_20240221_132934_ru.kslabs.ksweb1a274c93f246b6d3.jpg" alt="Screenshot_20240221_132934_ru.kslabs.ksweb1a274c93f246b6d3.jpg" border="0">
         <p>不要照抄，不一样，点上面的保存，再退出</p>
         <img class="mx-auto d-block" width="50%" height="50%" src="https://cdnjson.com/images/2024/02/21/Screenshot_20240221_134909_ru.kslabs.ksweb_1b58ac7b8149204e1.jpg" alt="Screenshot_20240221_134909_ru.kslabs.ksweb_1b58ac7b8149204e1.jpg" border="0" />
         <p>编辑配置文件，注意不是刚才那个，是http端口</p>
@@ -123,13 +123,17 @@
           </code>
         </pre>
         <h2>配置内网穿透</h2>
-        <p>要外网访问的话，需要内网穿透到外网(无公网ip，大部分都没有)下面是三个内网穿透映射网站，随便选一个,创建隧道(moeeyfrp不用创建的)，下载frp安卓版(安卓4.4似乎不能使用最新版）<a href="https://github.com/mainfunx/frpc_android/releases">下载frp_android</a>，或使用termux跑linuxarm版frp,把配置文件复制进去。注意,http端口和https端口都要穿透,不要使用中国大陆穿透服务器,需要备案,记得绑定域名</p>       
-      <ul class="shadow-sm p-3 bg-body-tertiary rounded">
-        <li><a href="https://muhanfrp.cn">木韩内网穿透</a></li>
-        <li><a href="https://openfrp.net">openfrp</a></li>
-        <li><a href="https://moeyy.cn/frp/">moeeyfrp</a>推荐</li>
-      </ul>
-        
+        <p>要外网访问的话，需要内网穿透到外网(无公网ip，大部分都没有)下面是三个内网穿透映射网站，随便选一个,创建隧道(moeeyfrp不用创建的)，下载frp安卓版(安卓4.4似乎不能使用最新版）<a href="https://github.com/mainfunx/frpc_android/releases">下载frp_android</a>，或使用termux跑linuxarm版frp,把配置文件复制进去。注意,http端口和https端口都要穿透,不要使用中国大陆穿透服务器,需要备案,记得绑定域名</p>
+        <ul class="shadow-sm p-3 bg-body-tertiary rounded">
+            <li><a href="https://muhanfrp.cn">木韩内网穿透</a></li>
+            <li><a href="https://openfrp.net">openfrp</a></li>
+            <li><a href="https://moeyy.cn/frp/">moeeyfrp</a>推荐</li>
+        </ul>
+        <p>frp的配置很简单，新建一个配置文件，把映射网站里的配置复制到里面即可</p>
+        <h2>配置域名</h2>
+        <p>注册一个域名(可以是二级域名或顶级域名)用ping,ping出穿透服务器的ip,记录类型是A,记录值填ping出的ip</p>
+        <h2>完成！</h2>
+        <p>在网站主机的目录里放上cms或静态页面，访问绑定的域名，试试效果罢</p>
         <!--评论系统-->
         <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
         <div id="waline"></div>
