--- a/文章/使用Nerchat!聊天/index.html
+++ b/文章/使用Nerchat!聊天/index.html
@@ -84,7 +84,14 @@
             <p>看图</p>
             <img class="mx-auto d-block" height="50%" width="50%" src="https://cdnjson.com/images/2024/05/19/sketch17160937013371849aaf3bb4987ef.png" alt="sketch17160937013371849aaf3bb4987ef.png" border="0">
             <br>
-            <p>Element对平板和宽屏支持不好，建议使用Fluffychat来替代Element，使用操作非常简单</p>
-            <p>记住，一定要保管好密钥，不然之前加密房间的消息会全部无法查看</p>
+            <p>Element对平板和宽屏支持不好，建议使用Fluffychat来替代Element，使用操作非常简单，相信不用教就会，但fluffychat注册不了账户，在Element里注册，再用fluffychat登陆</p>
+            <p>记住，一定要保管好密钥，不然之前加密房间的消息会全部无法查看，密钥是这种格式的<code>XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX</code></p>
+            <h2>说了那么多，用我们熟知的那些聊天软件不好吗？</h2>
+            <b>不好</b><p>那些商业公司，博取用户信任后，就开始为非作歹，无处不在的网络审查，我们的消息不再安全，不断膨胀的体积，撑爆我们的手机(虚幻引擎加持的QQ,搞不明白了，用动图凑合不好么)。互联网是造福人类的就像<a href="https://www.mozilla.org/zh-CN/about/manifesto/">mozilla宣言</a>说的那样希望你们能看透这一切，相信自由软件的力量！
+            <h2>用起来怎么样？</h2>
+            <p>最大的特点就是简洁美观，没有多余的功能，但应有的都有，通话，发送图片文字，甚至支持markdown格式，这是许多聊天软件没有做到的。</p>
+            <img class="mx-auto d-block rounded" height="50%" width="50%" src="https://cdnjson.com/images/2024/05/23/Screenshot_20240523_224443_chat.fluffy.fluffychat3e516546e5977a93.jpg" alt="Screenshot_20240523_224443_chat.fluffy.fluffychat3e516546e5977a93.jpg" border="0" />
+            <br>
+            <img class="mx-auto d-block rounded" height="50%" width="50%" src="https://cdnjson.com/images/2024/05/24/Screenshot_20240524_220726_chat.fluffy.fluffychatb5b21f37daa80cf7.jpg" alt="Screenshot_20240524_220726_chat.fluffy.fluffychatb5b21f37daa80cf7.jpg" border="0">
         </div>
     </div>
