--- a/核导弹/index.html
+++ b/核导弹/index.html
@@ -5,83 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
-        <meta name="description" content="小猪漫画的猪圈，核弹的语录！">
-                <script>
-               (() => {
-          'use strict'
-
-          const getStoredTheme = () => localStorage.getItem('theme')
-          const setStoredTheme = theme => localStorage.setItem('theme', theme)
-
-          const getPreferredTheme = () => {
-            const storedTheme = getStoredTheme()
-            if (storedTheme) {
-              return storedTheme
-            }
-
-            return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
-          }
-
-          const setTheme = theme => {
-            if (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-              document.documentElement.setAttribute('data-bs-theme', 'dark')
-            } else {
-              document.documentElement.setAttribute('data-bs-theme', theme)
-            }
-          }
-
-          setTheme(getPreferredTheme())
-
-          const showActiveTheme = (theme, focus = false) => {
-            const themeSwitcher = document.querySelector('#bd-theme')
-
-            if (!themeSwitcher) {
-              return
-            }
-
-            const themeSwitcherText = document.querySelector('#bd-theme-text')
-            const activeThemeIcon = document.querySelector('.theme-icon-active use')
-            const btnToActive = document.querySelector(`[data-bs-theme-value="${theme}"]`)
-            const svgOfActiveBtn = btnToActive.querySelector('svg use').getAttribute('href')
-
-            document.querySelectorAll('[data-bs-theme-value]').forEach(element => {
-              element.classList.remove('active')
-              element.setAttribute('aria-pressed', 'false')
-            })
-
-            btnToActive.classList.add('active')
-            btnToActive.setAttribute('aria-pressed', 'true')
-            activeThemeIcon.setAttribute('href', svgOfActiveBtn)
-            const themeSwitcherLabel = `${themeSwitcherText.textContent} (${btnToActive.dataset.bsThemeValue})`
-            themeSwitcher.setAttribute('aria-label', themeSwitcherLabel)
-
-            if (focus) {
-              themeSwitcher.focus()
-            }
-          }
-
-          window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
-            const storedTheme = getStoredTheme()
-            if (storedTheme !== 'light' && storedTheme !== 'dark') {
-              setTheme(getPreferredTheme())
-            }
-          })
-
-          window.addEventListener('DOMContentLoaded', () => {
-            showActiveTheme(getPreferredTheme())
-
-            document.querySelectorAll('[data-bs-theme-value]')
-              .forEach(toggle => {
-                toggle.addEventListener('click', () => {
-                  const theme = toggle.getAttribute('data-bs-theme-value')
-                  setStoredTheme(theme)
-                  setTheme(theme)
-                showActiveTheme(theme, true)
-                })
-              })
-          })
-         })()  
-        </script>  
+        <script src="/dark.js"></script>
+        <link rel="stylesheet" href="/index2.css">
     </head>
     <body><!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light">
