--- a/blog.html
+++ b/blog.html
@@ -2,18 +2,7 @@
 
 <head>
     <title>文章:猪圈-pig810运营</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
-    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.css" rel="stylesheet">
-    <meta name="description" content="pig810的博客-邮箱：pig810@outlook.com">
-    <script src="/dark.js"></script>
-    <script src="/view-image.min (1).js"></script>
-    <script>
-        window.ViewImage && ViewImage.init('img');
-    </script>
-    <link rel="stylesheet" href="/index2.css">
+      <script src="/js/head.js"></script>
     <style>
         .p {
             border-left: 9px solid #4169E1;
@@ -28,32 +17,7 @@
 </head>
 
 <body>
-    <!--导航栏-->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm">
-        <div class="container-fluid"><a class="navbar-brand" href="#"> <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top"> 猪圈 </a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">首页</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
-                    <form>
-                        <input class="form-control" type="text" id="searchInput" placeholder="搜索">
-                    </form>
-                    <!-- 搜索结果 -->
-                    <br>
-                    <ul class="searchResults bg-light rounded fixed-top">
-                        <!-- 搜索结果将会动态加载到这里 -->
-                    </ul>
-                    <!-- JavaScript 代码 -->
-                    <script src="/search.js"></script>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <script src="/js/navbar.js"></script>
     <div class="m-3">
         <h1 class="text-center">pig810的blog</h1>
         <h6 class="display-6 text-center">最近文章</h6>
@@ -167,25 +131,10 @@
     <div id="menu1" class="container tab-pane fade">       
        <p>2023.6.5本站建立</p>
        <p>2024.5.18删掉了💩</p>      
+       <p>2024.8.16重构</p>
     </div>
-
-
-    <!--页脚-->
-    <div class="mt-5 p-4 bg-dark text-white text-center container-fluid">
-        <span id="runtime_span"></span>
-        <script src="/time.js"></script>
-        <br>
-        <a href="https://stats.uptimerobot.com/xE8LGHmDxB">网站监测</a>
-        <p>pig810负责运营</p>
-        <div class="btn-group">
-            <a href="/sitemap.xml" class="btn btn-warning">网站地图查看
-                <i class="bi bi-diagram-2"></i>
-            </a>
-            <a href="https://dns.rnmcnm.com" class="btn btn-primary">域名由日出提供
-                <i class="bi bi-globe"></i>
-            </a>
-        </div>
-    </div>
+    
+   <script src="/js/footer.js"></script>
 </body>
 
 </html>
