--- a/留言.html
+++ b/留言.html
@@ -2,14 +2,7 @@
 <html lang="zh-CN">
 <head>
     <title>留言:猪圈-pig810运营</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.staticfile.net/twitter-bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.staticfile.net/twitter-bootstrap/5.3.2/js/bootstrap.min.js"></script>
-    <link href="https://cdn.staticfile.net/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
-    <script src="/dark.js"></script>
-    <link rel="stylesheet" href="/index.css">
-    <meta name="description" content="欢迎来到pig810的个人网站！我是sb，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
+    <script src="/js/head.js"></script>
 </head>
 
 <body>
