--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <meta charset="utf-8"/>
     <script src="/js/navbar.js"></script>
     <div class="row m-2">
     <!-- 左栏 -->
