--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,7 @@
 
 <body>
   <script src="/js/navbar.js"></script>
+  <meta charset="utf-8"/>
     <div class="m-3">
         <h1 class="text-center">pig810的blog</h1>
         <h6 class="display-6 text-center">最近文章</h6>
@@ -36,15 +37,6 @@
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">日志</a></li>
         </ul>
     </div>
-
-
-    <!--回到顶部-->
-    <div class="fixed-bottom">
-        <a href="#" class="btn btn-primary bth-sm m-2">
-            <i class="bi bi-arrow-bar-up"></i>
-        </a>
-    </div>
-
 
     <!--全部-->
     <div class="tab-content m-2">
